# SuperStation-DockIR

./: .gitignore  APPLE_REMOTE.md  CMakeLists.txt  IR_READER.md  LICENSE.md  README.md
nec_receive_library/: CMakeLists.txt  nec_receive.c  nec_receive.h  nec_receive.pio
src/: main.c  tusb_config.h  usb_descriptors.c
